--- a/House_price_prediction.ipynb
+++ b/House_price_prediction.ipynb
@@ -4578,7 +4578,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Global descriptors"
+    "# Global descriptors\n",
+    "\n",
+    "This block generates 200 random synthetic samples to estimate global SHAP values.\n",
+    "\n",
+    "It reveals which features have the highest overall impact on the model's predictions."
    ]
   },
   {
@@ -4612,11 +4616,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This summary plot displays the most influential features across all predictions based on 200 synthetic samples.  \n",
+    "Each dot represents a prediction; red indicates a high feature value, blue a low one.\n",
+    "\n",
+    "- **Top impactful features:** `m2_real`, `bath_num`, and `room_num` consistently drive predictions.\n",
+    "- **Location and house type:** Cities like `Palma de Mallorca` and `Calvià`, and types such as `Casa rural` or `Piso`, also play a significant role.\n",
+    "- **Interpretation:** Features on the right (positive SHAP value) increase the predicted price, while those on the left decrease it.\n",
+    "\n",
+    "This helps understand which variables the model relies on the most at a global level."
+   ]
   }
  ],
  "metadata": {
